--- a/gb/23/7/10/n14031345.md
+++ b/gb/23/7/10/n14031345.md
@@ -40,32 +40,33 @@
 <p>其中第七次是1972年，毛泽东会见日本内阁总理大臣田中角荣时说：“我们要感谢日本，没有日本侵略中国，我们就不可能取得国共合作，我们就不能得到发展，最后取得政权。……我们是有你们的帮助，今天才能在北京见你们。”◇</p>
 <p>责任编辑：宋佳怡#</p>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/15/7/8/n4475525.md#1">纽约侨界纪念活动  追忆缅怀七七抗战</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/16/7/12/n8090279.md#1">洛杉矶侨界“纪念七七抗战”推动和平</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/17/7/8/n9367012.md#1">七七抗战80周年 南加侨界观纪录片纪念</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/17/9/22/n9659163.md#1">杨艾俐：纪念七七抗战八十周年</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640659.md#1">罗晋被传婚变之际 经纪人发布罗父离世噩耗</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/22/n14640721.md#1">三退声明精选（2025/11/21）</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640342.md#1">英申请永居资格年限延至10年 港人BNO年限不变</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640341.md#1">郑州多名男子开越野车撞开烟酒店大门抢劫</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank">解体中共复兴中华</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/12/18/n11729917.md#1" target="_blank">袁斌：“南京事件”与所谓“四一二反革命政变”</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/8/30/n11488843.md#1" target="_blank">34国法轮功学员欧洲集会游行 英议员声援</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank">亿万人与东方一本奇书</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/5/10/n11248166.md#1" target="_blank">【征文】袁斌：中共是怎么炮制“英雄人物”的</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/2/8/n11032583.md#1" target="_blank">拥有幸福健康 澳洲民众感恩法轮功师父</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/23/n14622152.md#1">科学家濒死7秒经历神奇事件 颠覆人生认知</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/19/n14619422.md#1">【未解之谜】天才科学家杨定一的灵性之路</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/15/n14616650.md#1">哈尔斯的《笑面骑士》：艺术史上最英俊男子</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/14/n14615995.md#1">最是想念的季节：珍藏霜降之美 深秋平补养生有道</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/11/n14614307.md#1">汉朝丞相公孙弘：海边放猪户扭转人生</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/24/n14623000.md#1">【时政春秋】盘点中共四中全会</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/24/n14622995.md#1">【思想领袖】重建信仰与理性 拯救西方传统</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/24/n14623042.md#1">【重播】FBI对在费城破获大规模毒品案举行记者会</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/23/n14621944.md#1">中共四中全会闭幕 高层变局揭盅 中委塌方</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/23/n14622032.md#1">中共军委不加人 仅升张升民 董军没戏</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/22/n14621752.md#1">李嫣现身李亚鹏直播间 30秒带来2300万元业绩</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/22/n14621812.md#1">郭富城晒宝宝正脸照 宣布三胎得女</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/23/n14622525.md#1">黄晓明路演尴尬 新片预售票房仅10万元</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/23/n14622568.md#1">邓莎丈夫被爆行贿千万 两人参演节目延期播出</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/24/n14623053.md#1">林心如陆综才播一集突喊卡 “震撼原因”曝光</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/24/n14622679.md#1">2025年美国空服员的薪资有多少？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/23/n14621961.md#1">专家：珍珠奶茶隐藏的风险比你想像的严重</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/24/n14622778.md#1">有白发不是坏事？ 研究：这是防癌机制</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/22/n14621272.md#1">分手后如何疗伤？ 心理学家分享5个策略</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/20/n14620237.md#1">板豆腐vs.嫩豆腐 热量与特色比一比</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/18/1/23/n10079917.md#1">腊八的来源与风俗：吃了腊八饭就把年来办！</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/15/6/19/n4461035.md#1">美人巨眼识穷途——读《虬髯客传》之红拂女(上)</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/15/6/23/n4464215.md#1">闻道长安似弈棋——读《虬髯客传》之虬髯客(下)</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/11/8/2/n3332566.md#1">守信重义 等到迟来的好姻缘</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/28/n14685999.md#1">揭示真实的米开朗基罗壁画色彩</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/2/1/n14688921.md#1">【重播】川普及内阁成员抵达海湖庄园婚礼现场</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/31/n14688463.md#1">【军事情报局】打爆委国的F-35中队飞往中东</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/31/n14688343.md#1">【重播】高市早苗会晤来访英首相并举行记者会</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/29/n14687003.md#1">【独家】张又侠等军头和习矛盾激烈</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/30/n14687419.md#1">【独家】张又侠落马 军方启动临战状态</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/29/n14686742.md#1">中国转为零工经济国 民众挣扎求生存</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/29/n14687150.md#1">儿子遭庾澄庆不回信息 伊能静帮前夫打圆场</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/29/n14687077.md#1">女星金晨被爆驾车肇事逃逸 疑让助理顶包惹议</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/31/n14688459.md#1">陆媒票选最有好感艺人 佘诗曼成唯一入榜港星</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/30/n14687186.md#1">遭王祖蓝挑战身高 大陆歌手周深幽默回应</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/31/n14687927.md#1">金钟国罕见公开爱妻身份 称一直把她当妹妹看</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/30/n14687329.md#1">占星家披露2026年最幸运的几个日子</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/30/n14687470.md#1">专家解析嫉妒损害伴侣关系的3种方式</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/2/1/n14688718.md#1">这些行为看似无害 但会让旅馆员工恼火</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/28/n14685989.md#1">2026年不容错过的旅行目的地</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/31/n14688143.md#1">【车评】展现超级四驱实力 2025 Mitsubishi Outlander SEL</a></li>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/7/10/n14031345.htm">旧金山纪念抗战86周年 展示文物讲述历史真相</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/23/7/10/n14031345.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
